Added autoprefixing to datepicker for mobile testing

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<!-- Bootstrap CDN -->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Font Awesome CDN -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
-		integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" />
 	<!--Import Futura from Adobe Fonts-->
 	<link rel="stylesheet" href="https://use.typekit.net/hdw8ydb.css">
 	<!--Favicon Link-->
@@ -226,14 +225,16 @@
                                                     <div class="form-row align-items-center">
                                                         <div class="col-md-auto">
                                                             <label class="fname" for="fname">First Name</label>
+                                                            <br>
                                                             <input type="text" id="fname" name="first_name"
-                                                                class="text-input" required="">
+                                                                class="text-input" required /><br>
                                                         </div>
                                                     </div>
                                                     <!-- Last Name Input field -->
                                                     <div class="form-row">
                                                         <div class="col-md-auto">
                                                             <label for="lname" class="lname">Last Name</label>
+                                                            <br>
                                                             <input type="text" id="lname" name="last_name"
                                                                 class="text-input" required="">
                                                         </div>
@@ -242,6 +243,7 @@
                                                     <div class="form-row">
                                                         <div class="col-md-auto">
                                                             <label for="email" class="email">Email</label>
+                                                            <br>
                                                             <input type="email" id="email" name="email_address"
                                                                 class="text-input" required="">
                                                         </div>
@@ -252,7 +254,8 @@
                                                         <div class="col-md-auto">
                                                             <input type="radio" id="vinyasa" name="class_selection"
                                                                 value="vinyasa" required="">
-                                                            <label for="vinyasa" class="vinyasa">Vinyasa Flow
+                                                            <label for="vinyasa" class="vinyasa">
+                                                                <br>Vinyasa Flow
                                                             </label>
                                                         </div>
                                                     </div>
@@ -278,15 +281,14 @@
                                                     <!--Datepicker-->
                                                     <div class="form-group row">
                                                         <div class="col-md-auto">
-                                                            <label for="date" class="date"></label>
-                                                            <input type="date" name="date" id="date" required="">
+                                                            <i class="fas fa-calendar"></i>
+                                                            <input type="date" name="date" id="date" required>
                                                         </div>
                                                     <!--Submit Button-->
                                                     </div>
                                                     <div class="form-group row">
                                                         <div class="col-md-auto">
-                                                            <button type="submit" class="btn btn-info"
-                                                                style="float:right">Submit</button>
+                                                            <button type="submit" class="btn btn-info">Submit</button>
                                                         </div>
                                                     </div>
                                                 </form>
@@ -356,6 +358,7 @@
                                                     <div class="form-row align-items-center">
                                                         <div class="col-md-auto">
                                                             <label class="fname" for="fname">First Name</label>
+                                                            <br>
                                                             <input type="text" id="fname" name="first_name"
                                                                 class="text-input" required="">
                                                         </div>
@@ -364,6 +367,7 @@
                                                     <div class="form-row">
                                                         <div class="col-md-auto">
                                                             <label for="lname" class="lname">Last Name</label>
+                                                            <br>
                                                             <input type="text" id="lname" name="last_name"
                                                                 class="text-input" required="">
                                                         </div>
@@ -372,6 +376,7 @@
                                                     <div class="form-row">
                                                         <div class="col-md-auto">
                                                             <label for="email" class="email">Email</label>
+                                                            <br>
                                                             <input type="email" id="email" name="email_address"
                                                                 class="text-input" required="">
                                                         </div>
@@ -382,7 +387,7 @@
                                                         <div class="col-md-auto">
                                                             <input type="radio" id="vinyasa" name="class_selection"
                                                                 value="vinyasa" required="">
-                                                            <label for="vinyasa" class="vinyasa">Vinyasa Flow
+                                                            <label for="vinyasa" class="vinyasa"><br>Vinyasa Flow
                                                             </label>
                                                         </div>
                                                     </div>
@@ -392,7 +397,7 @@
                                                         <div class="col-md-auto">
                                                             <input type="radio" id="restorative" name="class_selection"
                                                                 value="restorative">
-                                                            <label for="restorative" class="restorative">Restorative
+                                                            <label for="restorative" class="restorative">Restorative Yoga
                                                                </label>
                                                         </div>
                                                     </div>
@@ -409,8 +414,8 @@
                                                     </div>
                                                     <div class="form-group row">
                                                         <div class="col-md-auto">
-                                                            <label for="date" class="date"></label>
-                                                            <input type="date" name="date" id="date" required="">
+                                                            <i class="fas fa-calendar"></i>
+                                                            <input type="date" name="date" id="date" required>
                                                         </div>
                                                     </div>
 
@@ -480,6 +485,7 @@
                                                             <div class="col-md-auto">
                                                                 <label class="fname" for="fname">First
                                                                     Name</label>
+                                                                    <br>
                                                                 <input type="text" id="fname" name="first_name"
                                                                     class="text-input" required="">
                                                             </div>
@@ -489,15 +495,16 @@
                                                             <div class="col-md-auto">
                                                                 <label for="lname" class="lname">Last
                                                                     Name</label>
+                                                                    <br>
                                                                 <input type="text" id="lname" name="last_name"
-                                                                    class="text-input" required="">
+                                                                    class="text-input" required />
                                                             </div>
                                                         </div>
                                                         <!-- Email Input field -->
                                                         <div class="form-row">
                                                             <div class="col-md-auto">
-                                                                <label for="email" class="email">Email
-                                                                    Addr.</label>
+                                                                <label for="email" class="email">Email</label>
+                                                                <br>
                                                                 <input type="email" id="email" name="email_address"
                                                                     class="text-input" required="">
                                                             </div>
@@ -508,7 +515,7 @@
                                                             <div class="col-md-auto">
                                                                 <input type="radio" id="vinyasa" name="class_selection"
                                                                     value="vinyasa" required="">
-                                                                <label for="vinyasa" class="vinyasa">Vinyasa
+                                                                <label for="vinyasa" class="vinyasa"><br>Vinyasa
                                                                     Flow</label>
                                                             </div>
                                                         </div>
@@ -517,7 +524,7 @@
                                                             <div class="col-md-auto">
                                                                 <input type="radio" id="restorative"
                                                                     name="class_selection" value="restorative">
-                                                                <label for="restorative" class="restorative">Restorative
+                                                                <label for="restorative" class="restorative">Restorative Yoga
                                                                     </label>
                                                             </div>
                                                         </div>
@@ -534,8 +541,8 @@
                                                     <!--Datepicker-->
                                                         <div class="form-group row">
                                                             <div class="col-md-auto">
-                                                                <label for="date" class="date"></label>
-                                                                <input type="date" name="date" id="date" required="">
+                                                                <i class="fas fa-calendar"></i>
+                                                                <input type="date" name="date" id="date" required>
                                                             </div>
                                                         </div>
                                                         <!--Submit Button-->
@@ -720,6 +727,5 @@
 			$(".navbar-collapse").collapse('hide');
 		});
 	</script>
-
 </body>
 </html>
