Removed excess styles from datepicker

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                                                                 <label for="email" class="email">Email</label>
                                                                 <br>
                                                                 <input type="email" id="email" name="email_address"
-                                                                    class="text-input" required="">
+                                                                    class="text-input" required />
                                                             </div>
                                                         </div>
                                                     <!-- Class Sign Up Radio Buttons -->
@@ -542,7 +542,7 @@
                                                         <div class="form-group row">
                                                             <div class="col-md-auto">
                                                                 <i class="fas fa-calendar"></i>
-                                                                <input type="date" name="date" id="date" required>
+                                                                <input type="date" name="date" id="date" class="date" required />
                                                             </div>
                                                         </div>
                                                         <!--Submit Button-->
