Added nav-item to make navbar more intuitive

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 </head>
 
 <!-- Body -->
-
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-
     <!-- Header -->
     <header>
         <!-- Navbar -->
@@ -49,6 +47,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#quotes">Quotes</a>
                     </li>
                 </ul>
                 <!--Social Media Links-->
@@ -190,7 +191,7 @@
                         <div class="col-12 section-header">
                             <h2 class="section-header">Schedule</h2>
                             <hr>
-                            <p>We hope to see you soon!</p>
+                            <p class="schedule-content">We hope to see you soon!</p>
                         </div>
                         <div class="row row-cols-1 row-cols-lg-1">
                             <!--Grid for card deck-->
