Repaired classes and id's in schedule card

--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@
                                 <div class="col mb-4">
                                     <div class="card h-100">
                                         <div class="mx-auto">
-                                            <img src="assets/images/chakracleansing.jpg" alt="avatar 3"
-                                                class="card-img-top">
+                                            <img src="assets/images/chakracleansing.jpg" alt="chakracleansing" class="card-img-top">
+                                        </div>
                                             <!--Card Body-->
                                             <div class="card-body">
                                                 <h4 class="card-title mt-1">Chakra Cleansing</h4>
@@ -481,7 +481,7 @@
                                                     <div class="tab-pane fade" id="signup3" role="tabpanel"
                                                         aria-labelledby="pills-signup-tab">
                                                         <div class="tab-content" id="pills-tabContent">
-                                                            <div class="tab-pane" id="restorative" role="tabpanel"
+                                                            <div class="tab-pane" id="chakracleansing" role="tabpanel"
                                                                 aria-labelledby="about-tab">
                                                             </div>
                                                             <!-- Sign Up Form -->
