--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@
                                                             <div class="form-group text-center">
                                                                 <div class="col">
                                                                     <i class="fas fa-calendar"></i>
-                                                                    <input type="date" name="date" id="date" required />
+                                                                    <input type="date" name="date" id="date"
+                                                                    class="date" required />
                                                                 </div>
                                                                 <!--Submit Button-->
                                                             </div>
@@ -546,7 +547,7 @@
                                                                     <div class="col">
                                                                         <i class="fas fa-calendar"></i>
                                                                         <input type="date" name="date" id="date"
-                                                                            class="date" required />
+                                                                        class="date" required />
                                                                     </div>
                                                                 </div>
                                                                 <!--Submit Button-->
