Added and styled datepicker placeholder text

--- a/index.html
+++ b/index.html
@@ -285,9 +285,8 @@
                                                             <!--Datepicker-->
                                                             <div class="form-group text-center">
                                                                 <div class="col">
-                                                                    <i class="fas fa-calendar"></i>
                                                                     <input type="date" name="date" id="date"
-                                                                    class="date" required />
+                                                                    class="form-control" placeholder="mm/dd/yyyy" required />
                                                                 </div>
                                                                 <!--Submit Button-->
                                                             </div>
@@ -415,9 +414,8 @@
                                                             <!--Datepicker-->
                                                             <div class="form-group text-center">
                                                                 <div class="col">
-                                                                    <i class="fas fa-calendar"></i>
                                                                     <input type="date" name="date" id="date"
-                                                                        class="date" required />
+                                                                        class="form-control" placeholder="mm/dd/yyyy" required />
                                                                 </div>
                                                             </div>
                                                             <!--Submit Button-->
@@ -545,9 +543,8 @@
                                                                 <!--Datepicker-->
                                                                 <div class="form-group text-center">
                                                                     <div class="col">
-                                                                        <i class="fas fa-calendar"></i>
                                                                         <input type="date" name="date" id="date"
-                                                                        class="date" required />
+                                                                        class="form-control" placeholder="mm/dd/yyyy" required />
                                                                     </div>
                                                                 </div>
                                                                 <!--Submit Button-->
