Added links to contact icons to enhance usability

--- a/index.html
+++ b/index.html
@@ -529,11 +529,15 @@
         <h2 class="section-header">Contact Us</h2>
         <hr>
         <div class="row">
+        <!--Contact Details-->
             <div class="col-xs-8 col-sm-4">
-                <p><i class="fas fa-map-marker-alt"></i><span> New York, New York</span>
-                </p>
-                <p><i class="fas fa-phone"></i> 212.000.0000 </p>
-                <p><i class="fas fa-envelope-open"></i> owner@infinty.nyc</p>
+                <!--Address-->
+                <p><a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank"><i class="fas fa-map-marker-alt"></i></a><span class="contact"> New York, New York</span></p>
+                <!--Phone number-->
+                <p><a href="https://www.google.com/gmail/about/" target="_blank"><i class="fas fa-phone"></i></a><span class="contact"> 212.000.0000</span></p>
+                <!--email-->
+                <p><a href="https://voice.google.com/about" target="_blank"><i class="fas fa-envelope-open"></i></a><span class="contact"> owner@infinty.nyc</span></p>
+
             </div>
             <div class="col-xs-4 col-sm-8">
                 <div class="form-group">
