Updated submt button in signup form

--- a/index.html
+++ b/index.html
@@ -392,8 +392,12 @@
                                                                 </div>
                                                             </div>
                                                             <!-- Submit Button -->
-                                                            <input type="submit" value="Sign Up!"
-                                                                class="btn btn-info" />
+                                                            <div class="form-group">
+                                                                <div class="col-md-auto">
+                                                            <a type="submit" value="Sign Up!"
+                                                                class="btn btn-info">Sign Up!</a>
+                                                                </div>
+                                                            </div>
                                                         </form>
                                                     </section>
                                                     <!--Close Modal Button-->
