Tested signup form on mobile and adjusted styles

--- a/index.html
+++ b/index.html
@@ -391,13 +391,9 @@
                                                                     </label>
                                                                 </div>
                                                             </div>
-                                                            <!-- Submit Button -->
-                                                            <div class="form-group">
-                                                                <div class="col-md-auto">
-                                                            <a type="submit" value="Sign Up!"
-                                                                class="btn btn-info">Sign Up!</a>
-                                                                </div>
-                                                            </div>
+                                                        <!-- Submit Button -->
+                                                        <input type="submit" value="Sign Up!"
+                                                                    class="btn btn-info" />
                                                         </form>
                                                     </section>
                                                     <!--Close Modal Button-->
