Updated user stories with revised blockquotes

--- a/index.html
+++ b/index.html
@@ -607,8 +607,7 @@
                             <hr>
                             <!--Blockquote-->
                             <blockquote>
-                                As a studio member, I love that I can find class times on
-                                Infinity's website, so I know when to go!
+                                When I first joined I was worried that I wasn't flexibile, but Infinity's staff taught me that anybody can do yoga!
                             </blockquote>
                             <!--./blockquote-->
                         </div>
@@ -628,8 +627,7 @@
                             <hr>
                             <!--Blockquote-->
                             <blockquote>
-                                As an Infinity member, I can contact them from their website,
-                                so I never have to go out of my way!
+                                Infinity's classes taught me the tools needed to deal with day-to-day stress & anxiety. Now I'm happier than ever!
                             </blockquote>
                             <!--./blockquote-->
                         </div>
