Added content to primary sections to fill whitespace

--- a/index.html
+++ b/index.html
@@ -114,12 +114,8 @@
             </div>
             <div class="row">
                 <div class="flex-column col-12">
-                    <p class="text-md-center font-weight-normal">The staff of Infinity is proud to offer diverse
-                        classes, a flexible
-                        schedule and fair prices. We love what we do and we believe everybody should experience
-                        the peace, love
-                        &amp;
-                        eternal happiness that we feel at our studio.
+                    <p class="text-md-center font-weight-normal">
+						Infinity is a yoga and meditation studio located in New York, New York. Taught by a staff of dedicated instructors, our yoga and meditation classes help members achieve their fitness goals, find balance in their everyday lives and learn how to cope with stress and anxiety.
                     </p>
                 </div>
             </div>
@@ -192,7 +188,7 @@
                 <div class="col-12 section-header">
                     <h2 class="section-header">Schedule</h2>
                     <hr>
-                    <p class="schedule-content">We hope to see you soon!</p>
+                    <p class="schedule-content">The staff of Infinity is proud to offer diverse classes, a flexible schedule and fair prices. We love what we do and we believe everybody should experience the peace, love &amp; eternal happiness that we feel at our studio.</p>
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-lg-1">
@@ -314,7 +310,7 @@
                             <!--Card Body-->
                             <div class="card-body">
                                 <h4 class="card-title mt-1">Restorative Yoga</h4>
-                                <p class="text-muted">Sundays, 11:00am | 60 minutes</p>
+                                <p class="text-muted">Wednesdays, 11:00am | 60 minutes</p>
                                 <hr>
                                 <p>Using the support of blankets, bolsters and other props, experience a
                                     complete relaxation of body, mind and soul as you heal within.</p>
