Updated content in 404 error page

--- a/404.html
+++ b/404.html
@@ -4,35 +4,58 @@
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<!-- Bootstrap CDN -->
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/4.4.1/jquery.min.js"></script>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<title>Infinity 404</title>
 	<!-- Font Awesome CDN -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
-	<!--Import Futura from Adobe Fonts-->
-	<link rel="stylesheet" href="https://use.typekit.net/hdw8ydb.css">
-	<!-- Custom Stylesheet -->
-	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-	<!-- Title -->
-	<title>Infinity Yoga | Yoga and Meditation in NYC </title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" />
+	<!--Adobe Fonts-->
+	<link rel="stylesheet" href="https://use.typekit.net/vky1mut.css">
 	<!--Favicon Link-->
 	<link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico" />
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet">
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="assets/css/style.css" />
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+
 </head>
 
 <body>
+
 	<div id="notfound">
+		<div class="notfound-bg">
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
 		<div class="notfound">
 			<div class="notfound-404">
 				<h1>404</h1>
-				<h2 class="404">KARMA'S A</h2>
+				
 			</div>
-			<a href="index.html">TAKE ME OM!</a>
-			<a class="button" href="404.html">NAMASTE HERE</a>
+			<h2>Karma never loses an address</h2>
+			<a class="button" href="index.html">OM'page</a>
+			<a class="button" href="404.html">Nama'STAY</a>
+
+			<div class="notfound-social">
+				<a href="#"><i class="fab fa-facebook"></i></a>
+				<a href="#"><i class="fab fa-twitter"></i></a>
+				<a href="#"><i class="fab fa-pinterest-p"></i></a>
+				<a href="#"><i class="fab fa-instagram"></i></a>
+			</div>
 		</div>
 	</div>
 
-	<!-- This templates was made by Colorlib (https://colorlib.com) -->
 </body>
+<!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
