Updated modal size and schedule columns

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="row row-cols-1 row-cols-lg-1">
                 <!--Card Deck-->
                 <div class="card-deck">
-                    <div class="col mb-4">
+                    <div class="col-sm-4">
                         <!--First Card-->
                         <div class="card h-100">
                             <div class="mx-auto">
@@ -220,15 +220,14 @@
                                 <!-- Modal -->
                                 <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog"
                                     aria-labelledby="signUpModal" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                    <div class="modal-dialog modal-dialog-centered modal-md" role="document">
                                         <div class="modal-content">
+                                            <div class="modal-top top-color"><h2 class="modal-title">Sign Up!</h2></div>
                                             <div class="modal-header">
                                                 <div class="modal-body">
                                                     <section class="form_section">
                                                         <form class="signup-form" method="POST"
                                                             action="https://formdump.codeinstitute.net/">
-                                                            <h3 class="modal-title">Sign Up!</h3>
-                                                            <br>
                                                             <i class="fas fa-infinity"></i>
                                                             <br>
                                                             <!-- First Name Input field -->
@@ -301,7 +300,7 @@
                         </div>
                     </div>
                     <!--Second Card-->
-                    <div class="col mb-4">
+                    <div class="col-sm-4">
                         <div class="card h-100">
                             <div class="mx-auto">
                                 <img src="assets/images/restorative.jpg" alt="women using blocks during restorative yoga"
@@ -325,14 +324,13 @@
                                 </div>
                                 <!-- Modal -->
                                 <div class="modal fade" id="signUpModal2" tabindex="-1" role="dialog" aria-labelledby="signUpModal2" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                    <div class="modal-dialog modal-dialog-centered modal-md" role="document">
                                         <div class="modal-content">
+                                            <div class="modal-top top-color"><h2 class="modal-title">Sign Up!</h2></div>
                                             <div class="modal-header">
                                                 <div class="modal-body">
                                                     <section class="form_section">
                                                         <form class="signup-form" method="POST" action="https://formdump.codeinstitute.net/">
-                                                            <h3 class="modal-title">Sign Up!</h3>
-                                                            <br>
                                                             <i class="fas fa-infinity"></i>
                                                             <br>
                                                             <!-- First Name Input field -->
@@ -400,7 +398,7 @@
                         </div>
                     </div>
                     <!--Third Card-->
-                    <div class="col mb-4">
+                    <div class="col-sm-4">
                         <div class="card h-100">
                             <div class="mx-auto">
                                 <img src="assets/images/chakracleansing.jpg"
@@ -426,15 +424,14 @@
                                 <!-- Modal -->
                                 <div class="modal fade" id="signUpModal3" tabindex="-1" role="dialog"
                                     aria-labelledby="signUpModal3" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                    <div class="modal-dialog modal-dialog-centered modal-md" role="document">
                                         <div class="modal-content">
+                                            <div class="modal-top top-color"><h2 class="modal-title">Sign Up!</h2></div>
                                             <div class="modal-header">
                                                 <div class="modal-body">
                                                     <section class="form_section">
                                                         <form class="signup-form" method="POST"
                                                             action="https://formdump.codeinstitute.net/">
-                                                            <h3 class="modal-title">Sign Up!</h3>
-                                                            <br>
                                                             <i class="fas fa-infinity"></i>
                                                             <br>
                                                             <!-- First Name Input field -->
